add rabbitmq config send ChallengeSolveEvent to gaimification service

--- a/gimification-v2/src/main/resources/application.yml
+++ b/gimification-v2/src/main/resources/application.yml
@@ -52,9 +52,17 @@ spring:
     database: h2
     database-platform: org.hibernate.dialect.H2Dialect
 
-
-
-
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: guest
+    password: guest
+    exchange:
+      attempts: attempt.topic
+    queue:
+      gamification: gamification.queue
+    routing:
+      key: attempt.correct
 
 service:
   badgeProcessor:
@@ -62,9 +70,6 @@ service:
     silverNumber: 150
     goldNumber: 400
     bronzeNumber: 50
-
-
-
 
 
 management:
